<resources>
    <string name="app_name">Rivisto</string>
    <string name="all_notes">All Notes</string>
    <string name="hint_apiKey"><font size="15">apiKey</font></string>
    <string name="fragment_title_manual_configure">Manually Configure</string>
    <string name="fragment_note_imagePlaceholder">Create new notes</string>
    <string name="fragment_searchNotes_placeholder_search_results">Search Results</string>
    <string name="fragment_searchNotes_placeholder_empty_search">Couldn\'t find anything</string>
    <string name="fragment_searchNotes_placeholder_frequent_tags">Frequent Tags</string>
    <string name="fragment_searchNotes_placeholder_more">MORE</string>
    <string name="hint_messagingSenderID"><font size="15">messagingSenderID</font></string>
    <string name="hint_databaseURL"><font size="15">databaseURL</font></string>
    <string name="button_configure">Configure</string>
    <string name="action_settings">Settings</string>
    <string name="configure_automatic">Configure</string>
    <string name="configure_managed_account">Get Started</string>
    <string name="action_manual_configure">Manual Config.</string>
    <string name="action_create_note">Create Note</string>
    <string name="action_search_notes">Search Notes</string>
    <string name="action_view_trash">View Trash</string>
    <string name="action_view_labels">View Labels</string>
    <string name="action_save_note">Save Note</string>
    <string name="action_delete_note">Delete Note</string>
    <string name="action_share_note">Share Note</string>
    <string name="apiKey">apiKey</string>
    <string name="messagingSenderID">messagingSenderID</string>
    <string name="databaseURL">databaseURL</string>
    <string name="isConfigured">isConfigured</string>
    <string name="isAccountHolder">isAccountHolder</string>
    <string name="userKey">userKey</string>
    <string name="settings_reset">reset</string>
    <string name="settings_sign_out">signOut</string>
    <string name="search_hint">Search notes</string>
    <string name="action_restore_note">Restore Note</string>
    <string name="action_permanent_delete_note">Permanently Delete</string>
    <string name="action_empty_trash">Empty Trash</string>
    <string name="note_title_hint">What\'s note about?</string>
    <string name="note_content_long_hint">\n\nMore about it…\n\n\nTip - Add # before a word to add tag to this note.</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_cancel">Cancel</string>
</resources>
