<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="productivity.notes.rivisto.MainActivity">
    <item
        android:id="@+id/action_search_notes"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search_notes"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_view_labels"
        android:icon="@drawable/ic_label_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_view_labels"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_view_trash"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_view_trash"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
