<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="productivity.notes.rivisto.MainActivity">
    <item
        android:id="@+id/action_save_note"
        android:icon="@drawable/ic_done_black_24dp"
        android:orderInCategory="10"
        android:title="@string/action_save_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_note"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="20"
        android:title="@string/action_delete_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share_note"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="30"
        android:title="@string/action_share_note"
        app:showAsAction="ifRoom" />
</menu>