<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutAPIKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp">

            <EditText
                android:id="@+id/configureAPIKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_apiKey"
                android:inputType="text|textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutMessagingSenderID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textInputLayoutAPIKey"
            android:layout_below="@+id/textInputLayoutAPIKey"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/configureMessagingSenderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_messagingSenderID"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDatabaseURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textInputLayoutMessagingSenderID"
            android:layout_below="@+id/textInputLayoutMessagingSenderID"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/configureDatabaseURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_databaseURL"
                android:inputType="textUri" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/configureRivisto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutDatabaseURL"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15sp"
            android:layout_marginTop="30sp"
            android:background="@drawable/configure_button"
            android:text="@string/button_configure"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</ScrollView>